<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tacógrafo</string>
    <string name="menu_settings">Settings</string>
    <string name="b_init1">Gestión</string>
    <string name="b_init2">Listado</string>
    <string name="b_init3">Ubicación</string>
    <string name="b_init4">Preferencias</string>
    <string name="b_init5">Urgencias</string>
    <string name="driving">Conducción</string>
    <string name="dispose">Disposicion</string>
    <string name="relax">Descanso</string>
    <string name="startstop">Empezar/Terminar</string>
    <string name="work">Trabajo</string>
    <string name="times">Control de \n Tiempos</string>
    <string name="restTime">Tiempo que le resta de \n conducción contínua</string>
    <string name="timeof">Tiempo de </string>
    <string name="total">Listado de Tiempos \n del último día iniciado</string>
    <string name="startTime">Hora de Inicio</string>
    <string name="endTime">Hora de Fin</string>
    <string name="duractionTime">Duración</string>
    <string name="map_key">0g8zSJlmetuyV4QwmtlLRE9hpYKjq01UmPMAJ0Q</string>
    <string name="title_progress_dialog_maps">GPS</string>
	<string name="title_progress_msg_maps">Esperando a la localización GPS</string>
	<string name="title_preferences">Datos del usuario</string>
	<string name="name_person">Nombre del conductor</string>
	<string name="matricula">Matrícula del Vehículo</string>
	<string name="save_preferences">Guardar</string>
	<string name="dgt">Ver normativa en la DGT</string>
	<string name="empty_fields">Debe rellenar los dos campos</string>
	<string name="name">\n Nombre del conductor:</string>
	<string name="matirc">\n Matrícula del Vehículo:</string>
	<string name="noEmergencyCall">No se ha podido realizar la llamada a emergencias</string>
	<string name="save">Preferencias Guardadas</string>
	<string name="timeItem">Hora:</string>
	<string name="duracionItem">Duración:</string>
	<string name="posicion">No es posible obtener la ubicación</string>
	<string name="inicio">Inicio de la jornada</string>
 	<string name="fin">Final de la jornada</string>
 	<string name="initDay">Debes indicar que se inicia el día</string>
 	<string name="noDriving">No te encontrabas conduciendo</string>
 	<string name="disposeTime">Tiempo de disposición</string>
 	<string name="drivingTime">Tiempo de conducción</string>
 	<string name="relaxTime">Tiempo de descanso</string>
 	<string name="workTime">Tiempo de trabajo</string>
 	<string name="drivingYet">Ya te encuentras en tiempo de conducción</string>
 	<string name="disposeYet">Ya te encuentras en tiempo de disposición</string>
 	<string name="workYet">Ya te encuentras en tiempo de trabajo</string>
 	<string name="relaxYet">Ya te encuentras en tiempo de descanso</string>
 	<string name="alerta">ALERTA: Tiempo de conducción sobrepasado</string>
</resources>